--- a/partials/program_content_athlete.hbs
+++ b/partials/program_content_athlete.hbs
@@ -9,7 +9,7 @@
   <h1 class="program-top">NLPTathlete</h1>
   <p>For athletes in the Cambridge, Kitchener and Waterloo area, there is no better environment to train in than NLPT. Our intimate, and hard-working atmosphere creates an environment that simply can not be replicated in your typical “gym”.</p>
 
-  <p>You’ll also find that our coaches are some of the most experienced and knowledgeable in the area. Aside from their athletic and academic accomplishments (see Staff page), they believe in setting a good example for all athletes by preaching hard-work, accountability, and consistency both at and away from the gym.</p>
+  <p>You’ll also find that our coaches are some of the most experienced and knowledgeable in the area. Aside from their athletic and academic accomplishments (see <a href="/staff/">staff page</a>), they believe in setting a good example for all athletes by preaching hard-work, accountability, and consistency both in and out of the gym.</p>
   <img src="/assets/images/content-image-1.jpg">
 
 
