program, about, history, facilities content updates

--- a/page-facilities.hbs
+++ b/page-facilities.hbs
@@ -18,7 +18,7 @@
         <p>Cambridge, Ontario</p>
         <p>N1T 2K8</p>
       </div>
-      <p>Our Cambridge location is a 2,000 square foot space with 30-foot ceilings, a massage therapy clinic, a lounge area in the main lobby, and full men’s and women’s washrooms. The gym area has been designed to maximize open space, allowing plenty of room for a wide range of athletic movements. </p>
+      <p>Our Cambridge location is a 4,000 square foot space with 30-foot ceilings, a massage therapy clinic, a lounge area in the main lobby, and full men’s and women’s washrooms. The gym area has been designed to maximize open space, allowing plenty of room for a wide range of athletic movements. </p>
       <p>On the north end of Cambridge, we are conveniently located right off of Highway 401 (Townline Exit) and is in close proximity to the Cambridge Center Mall.</p>
 
       <div class="facility-image" id="camb-1">
@@ -66,7 +66,7 @@
          <p> Stratford, Otario N5A 7S7</p>
       </div>
         <p>Opened in the spring of 2015, our Stratford gym is housed inside the Stratford Rotary Complex overlooking both ice pads.</p>
-        <p>Like our Cambridge gym, this space also has over 2000 square feet of space for training and can comfortably handle large numbers of athletes and clients.</p>
+        <p>This space has over 2000 square feet of space for training and can comfortably handle large numbers of athletes and clients.</p>
         <p>The gym is also air conditioned and has full change rooms (but no showers) which are provided within the Rotary Complex.</p>
 
         <div class="facility-image" id="strat-1">
