--- a/partials/program_content_athlete.hbs
+++ b/partials/program_content_athlete.hbs
@@ -15,7 +15,8 @@
 
   <h2 class="subsection" id="NLPTathlete" data-id="1">NLPTathlete</h2>
 
-  <p>NLPTathlete is a fully-individualized training system designed to match the needs of both the athlete and the athlete’s sport. Each athlete begins with an assessment and movement screen in order to give coaches an idea exactly where the athlete stands and how to training process should begin.</p>
+  <p>NLPTathlete is a fully-individualized training system designed to match the needs of both the athlete and the athlete’s sport.</p>
+  <p>Each new athlete begins with an assessment and movement screen in order to give coaches an idea exactly where the athlete stands and how the training process should begin.</p>
 
   <h3>Programming</h3>
 
@@ -24,11 +25,12 @@
 
   <h3>Environment</h3>
 
-  <p>Many of our athletes and families have told us that our programming methodology goes much beyond a simple workout plan. As coaches, we see it as our responsibility not only write a good program, but create the right environment where that program's potential can be fulfilled. The training environment here is one of accountability, hard work, fun and getting results.</p>
+  <p>Many of our athletes and families have told us that our programming methodology goes much beyond a simple workout plan. As coaches, we see it as our responsibility not only write a good program, but create the right environment where that program's potential can be fulfilled. The training environment at NLPT is one of accountability, hard work, fun and getting results.</p>
 
   <h3>Coaching</h3>
 
-  <p>NLPT boasts the most experienced and educated coaching staff in the region. All of our coaches have pursued either kinesiology, human kinetics, or fitness and health degrees at the post-secondary level and beyond. They are fully certified and have lengthy athletic credentials to their name. But beyond their expertise, our coaching staff invests an incredible amount of care and attention into everyone at the gym. The #NLPTfamily is more than just a hashtag, it’s a core principle of our gym.</p>
+  <p>NLPT boasts the most experienced and educated coaching staff in the region. All of our coaches have pursued either kinesiology, human kinetics, or fitness and health degrees at the post-secondary level and beyond. They are fully certified and have lengthy athletic credentials to their name.</p>
+  <p>But beyond their expertise, our coaching staff invests an incredible amount of care and attention into athlete at the gym. The #NLPTfamily is more than just a hashtag, it’s a core principle of our gym.</p>
 
   <h3>Pricing and enrollment</h3>
   <div class="pricing-table margin-row clearfix">
@@ -78,7 +80,7 @@
 <h4>Phase 2 (July - August)<h4>
 
 <p>The next phase will progress to more power, speed and energy system specific training as the beginning of the competitive season approaches. Competition and difficulty of this phase will be very high and athletes must be prepared to work and do what is required outside of the gym (nutrition, recovery) to be prepared to train.</p>
-Nutrition and Massage
+<h4>Nutrition and Massage</h4>
 <p>Unlike 10 years ago, it’s no longer just about the training. Nutrition and recovery are now crucial components to an athlete’s development plan and our 2017 program will provide support on both fronts.</p>
 
 <p>Athletes will be required to fill out and submit weekly nutrition logs which will be evaluated by the NLPT coaching and therapy staff, who will then provide feedback and structured guidance on developing sound athlete-centered nutrition habits. Additionally, pre and post-workout Biosteel supplementation will be provided for each training session. </p>
