--- a/page-history.hbs
+++ b/page-history.hbs
@@ -4,44 +4,41 @@
   <div class="page-header history-page-header">
     <div class="hero-title">
       <h1>History</h1>
-    </div>
-  </div>
-
-  <div class="page-content">
-
-    <div class="about-content history-content container clearfix">
-    {{> "about_nav"}}
-
-    <img class="history-image" id="history-1" src="/assets/images/history-1.png">
-    <p>Although we’re still a small gym, the truth is we used to be much, much smaller. In 2008, Andrew Hopf was mid-way through his Master’s program in Exercise Physiology at the University of Waterloo, when he was offered the chance to be the strength coach for the men’s varsity hockey team. It was during this time that Andrew got the chance to apply his academic knowledge to high-level athletes, and his passion for coaching and teaching became ignited.</p>
-
-    <p>Many people have a dreams but never find the courage to act. As anyone that knows him will tell you, Andrew doesn’t suffer from this problem. He knew what he wanted: to start a gym where he could coach on his own terms. </p>
-
-    <p>The only problem was gyms cost money, and Andrew--being a student--had very little. But he did have a van and easy access to some soccer fields. Good enough. Andrew filed the necessary paperwork and Next Level Performance Training Incorporated was born. </p>
-
-    <img class="history-image" id="history-2" src="/assets/images/history-2.jpg">
-    <p>Andrew started small and did everything he could to build a name for himself. He offered to train athletes and teams for free, drove all over the region in the now famous purple “Vanburghini”, and made due with what little equipment he had. Andrew eventually built up his clientele and saved enough to put a deposit down on a small space on the east side of Victoria Street in Kitchener in 2010.</p>
-
-    <p>It was then that he called Eric Hagemann, one of his good friends from the University of Waterloo, to see if he might be interested in coming to help with the coaching duties. Eric had graduated from UW alongside Andrew with a degree in Honours Kinesiology, and then moved to Toronto to complete his Master’s in Rehabilitation Science. Like Andrew, Eric was eager to get out of the research lab and apply his knowledge in the real world, so he ditched his lab coat and embarked on a career as a strength and conditioning coach. </p>
-
-    <img class="history-image" id="history-4" src="/assets/images/history-4.jpg">
-    <p>After two years in Kitchener, we made a bold but decisive decision: to relocate to Cambridge. Although we found a great space conveniently located right off of Highway 401, we were more excited about relocating to Andrew’s hometown and getting involved in the youth sports community there. Formal strength and conditioning services weren’t something that was being offered in Cambridge at the time, and we were eager to fill the gap.</p>
-
-    <p>Over the next several years, our gym continued to grow. We saw an explosion in our adult training program, NLPTfit and began to get more involved with other sport programs such as the Cambridge Lions Football Association and Cambridge Youth Soccer. Additionally, we started training more hockey teams Cambridge Minor Hockey Association as well as the Roadrunners, Cambridge’s girls hockey program. In the summer, our High Performance Summer Program was also seeing a healthy boost in athletes, with more and more junior, collegiate, and professional hockey players joining on each year.</p>
-
-    <p>With the growth, we started hiring more staff. Namely Dylan Campion, a registered kinesiologist from Stratford, and Zach Shomphe, a former NLPT athlete who had graduated from Conestoga College with a diploma in Fitness and Health Promotion. </p>
-    <img class="history-image" id="history-6" src="/assets/images/history-6.jpg">
-
-    <p>In 2015, our company made another major move: we opened a second gym--NLPT Stratford. Although it was a much smaller space than our Cambridge location, the reception by the tight-knit community was incredible. Our adult program was extremely vibrant and we were able to help a whole new community of young athletes. </p>
-
-    <img class="history-image" id="history-7" src="/assets/images/strat-gym-1.jpg">
-    <p>That pretty much brings us up to present day. Both Stratford and Cambridge are doing well, and we’ve since added several more excellent staff members to the mix. Although we’ve enjoyed some decent growth, we’ve certainly got a lot more work to do. Our focus has been and continues to be on getting better, not bigger. </p>
-
-    <p>Thanks for taking the time to read a little bit of our history, and thank you for deciding to be a part of our future.</p>
-
-    <p class="signature">The NLPT Family</p>
-
-    </div>
   </div>
 </div>
-    {{> "email_subscribe_bar"}}
+
+<div class="page-content">
+
+    <div class="about-content history-content container clearfix">
+        {{> "about_nav"}}
+        <p>Two things you need to know about NLPT. </p>
+        <p>First, we are a small gym. We have no investors. No partners. No sponsors. And we’re very proud of that. We believe in creating an intimate, hard-working training atmosphere where everyone gets the attention and coaching they need, and we have always tried to maintain that.</p>
+        <p>Second, we’re incredibly family-oriented. We have a small, close-knit staff that has a lot history together. Our owner, Andrew Hopf is married to NLPT’s massage therapist, Michelle Miguel and has been best friends with Eric Hagemann, NLPT’s Director of Training for the last ten years. Many of the other coaches at NLPT are former athletes who have developed a passion for coaching and are now a part of our staff, grooming along the next wave of young athletes.</p>
+        <p>The story of NLPT over the years is that of slow, incremental growth. We stay focused on becoming the very best at what we do, and let our growth dictate what changes need to be made. </p>
+        <h3>Origins</h3>
+        <img class="history-image" id="history-1" src="/assets/images/history-1.png">
+        <p>Although we’re still a small gym, the truth is we used to be much, much smaller. In 2008, Andrew Hopf was mid-way through his Master’s program in Exercise Physiology at the University of Waterloo when he was offered the chance to be the strength coach for the men’s varsity hockey team. It was during this time that Andrew was able to apply his academic knowledge to high-level athletes, and his passion for coaching and teaching became ignited.</p>
+        <p>Many people have dreams but never find the courage to act. As anyone that knows him will tell you, Andrew doesn’t suffer from this problem. He knew what he wanted: to start a gym where he could coach on his own terms. </p>
+        <p>The only problem was, gyms cost money and Andrew--being a student--had very little. But he did have a van and easy access to some soccer fields. Good enough. Andrew filed the necessary paperwork and Next Level Performance Training Incorporated was born.</p>
+        <p>Andrew started small and did everything he could to build a name for himself. He offered to train athletes and teams for free, drove all over the region in the now famous purple “Vanburghini”, and made due with what little equipment he had. In 2010, Andrew eventually built up his clientele and saved enough to put a deposit down on a small space on the east side of Victoria Street in Kitchener.</p>
+        <h3>First gym</h3>
+        <img class="history-image" id="history-2" src="/assets/images/history-2.jpg">
+        <p>It was then that he called Eric Hagemann, one of his good friends from the University of Waterloo, to see if he might be interested in coming to help with the coaching duties. Eric had graduated from UW alongside Andrew with a degree in Honours Kinesiology, and then moved to Toronto to complete his Master’s in Rehabilitation Science. Like Andrew, Eric was eager to get out of the research lab and apply his knowledge to the real world, so he ditched his lab coat and embarked on a career as a strength and conditioning coach. </p>
+        <p>Andrew’s wife, Michelle (then fiancé) also started with NLPT at this point. Also a UW Kinesiology graduate, Michelle had recently finished her graduate studies at the Canadian College of Massage and Hydrotherapy and was starting her career as a Registered Massage Therapist. Her practice steadily grew and quickly served a vital role in keeping the clients and athletes of NLPT healthy and pain-free. </p>
+        <img class="history-image" id="history-4" src="/assets/images/history-4.jpg">
+        <p>The time in Kitchener was an incredible experience. But after two years on Victoria Street, we made a bold but decisive decision: to relocate to Cambridge. Although we found a great space conveniently located right off of Highway 401, we were more excited about relocating to Andrew’s hometown and getting involved in the youth sports community there. Formal strength and conditioning services weren’t something that was being offered in Cambridge at the time, and we were eager to fill the gap.</p>
+        <p>Over the next several years, our gym continued to grow. We saw an explosion in our adult training program, NLPTfit, and began to get more involved with other sport programs such as the Cambridge Lions Football Association and Cambridge Youth Soccer. Additionally, we started training more hockey teams from the Cambridge Minor Hockey Association and Cambridge’s girls hockey program, the Roadrunners. In the summer, our High Performance Summer Program was also seeing a healthy boost in athletes, with more and more junior, collegiate, and professional hockey players joining on each year. </p>
+        <img class="history-image" id="history-6" src="/assets/images/history-6.jpg">
+        <h3>Expansions</h3>
+        <p>With the growth, we started hiring more staff. Namely Dylan Campion, a kinesiologist from Stratford, Zach Shomphe, a former NLPT athlete who had graduated from Conestoga College with a diploma in Fitness and Health Promotion, and Heather Foell, a former NLPT intern who has since become a Registered Kinesiologist and now runs our NLPTfit program. </p>
+        <img class="history-image" id="history-7" src="/assets/images/strat-gym-1.jpg">
+        <p>In 2015, our company made another major move: we opened a second gym--NLPT Stratford. </p>
+        <p>Although it is a much smaller space than our Cambridge location, the reception from the tight-knit community was incredible. Our adult program was extremely vibrant and we were able to reach a whole new community of young athletes. </p>
+        <p>That pretty much brings us up to present day. Both Stratford and Cambridge are doing well, and we’ve since added several more excellent staff members to the mix. Although there has been some decent growth, we’ve certainly got a lot more work to do. Our focus has been and continues to be on getting better, not bigger. </p>
+        <p>Thanks for taking the time to read a little bit of our history.</p>
+        <p>Train smart,</p>
+        <p class="signature">The NLPT Family</p>
+    </div>
+</div>
+</div>
+{{> "email_subscribe_bar"}}
