--- a/page-programs.hbs
+++ b/page-programs.hbs
@@ -14,6 +14,7 @@
       {{> "nav_programs"}}
 
       <div class="program-content">
+        <h2>What sets NLPT apart?</h2>
         <p>NLPT is the gym for a truly individualized training experience.</p>
 
         <p>Whether you're a high-performing athlete or have been dealing with chronic pain and want to get back in shape, NLPT has you taken care of.</p>
@@ -34,6 +35,7 @@
 
         <p>There are three unique training programs that make up NLPT: NLPTathlete, NLPTfit, and NLPTteam. Click on the tab above that you fit into, and read more about one of the best gyms in Ontario.</p>
       </div>
+            {{> "testimonial_ticker"}}
     </div>
   </div>
 </div>
