--- a/page-about.hbs
+++ b/page-about.hbs
@@ -9,7 +9,7 @@
 
   <div class="page-content">
 
-    <div class="about-content container">
+    <div class="about-content content-text container">
       {{> "about_nav"}}
 
       <img src="/assets/images/membership.jpg" />
