--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2559,6 +2559,9 @@ img {
     width: 65px;
     margin-right: 20px; }
 
+#formwrapper {
+  margin: 0 !important; }
+
 /*
 =================
 NAV BAR
@@ -2923,15 +2926,22 @@ STAFF PAGE
 PROGRAMS PAGE
 ================
 */
+.page-content h3 {
+  font-size: 1.75em;
+  margin-bottom: 0.7em; }
+.page-content h4 {
+  font-size: 1.5em;
+  margin-bottom: 0.5em; }
+.page-content ul {
+  list-style: disc;
+  text-indent: 1em;
+  list-style-position: inside; }
+  .page-content ul li {
+    display: list-item; }
+
 .content-text {
   width: 70%;
   float: right; }
-  .content-text h3 {
-    font-size: 1.75em;
-    margin-bottom: 0.7em; }
-  .content-text h4 {
-    font-size: 1.5em;
-    margin-bottom: 0.5em; }
 
 .programs-nav-bar {
   margin: 30px 0; }
@@ -2955,14 +2965,6 @@ PROGRAMS PAGE
 
 .program-content {
   position: relative; }
-  .program-content h4 {
-    font-size: 1.5em; }
-  .program-content ul {
-    list-style: disc;
-    text-indent: 1em;
-    list-style-position: inside; }
-    .program-content ul li {
-      display: list-item; }
 
 .visible {
   display: block; }
@@ -2984,7 +2986,9 @@ PROGRAMS PAGE
     color: #ffffff;
     transition: none;
     -webkit-clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
-    clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%); }
+    clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
+    list-style: none;
+    text-indent: none; }
   .sub-programs .sub-program-button:hover {
     background: #2b2b2b; }
 
@@ -3109,6 +3113,14 @@ FACILITIES PAGE
 
 #strat-4 .thumbnail {
   width: 125px; }
+
+/*
+=================
+CLIENTS SECTION
+=================
+*/
+.partner-image {
+  width: 250px; }
 
 /*
 =================
