added clients section

--- a/default.hbs
+++ b/default.hbs
@@ -55,6 +55,7 @@
             <li><a class="nav-link" href="/staff/">Staff</a></li>
             <li><a class="nav-link" href="/facilities/">Facilities</a></li>
             <li><a class="nav-link" href="/contact/">Contact</a></li>
+            <li><a class="nav-link" href="/clients-section/">Clients section</a></li>
           </ul>
         </div>
 
