--- a/page-clients-section.hbs
+++ b/page-clients-section.hbs
@@ -7,20 +7,22 @@
   </div>
 
   <div class="page-content">
-    <div class="page-content about-content container">
-      <p>We appreciate your decision to be a part of the NLPT family. Below is a list of additional benefits, programs, and partnerships that you, as a member of NLPT are welcome to take advantage of.</p>
-      <h1>Family Discount</h1>
-      <p>It's not uncommon for clients to discover NLPT through a family member. Sometimes a parent signs their child up only to discover that NLPTfit would be a great program for themselves. Other times multiple siblings wish to train together. However it comes about, we're always honored when family members choose to train with us. However we know that things can quickly get expensive. So as a way of saying thank you, we provide a <b>10% discount to each family member's program cost.</b> </p>
+      <div class="page-content about-content container">
+        <p>We appreciate your decision to be a part of the NLPT family. Below is a list of additional benefits, programs, and partnerships that you, as a member of NLPT are welcome to take advantage of.</p>
+    <div hidden>
+        <h1>Family Discount</h1>
+        <p>It's not uncommon for clients to discover NLPT through a family member. Sometimes a parent signs their child up only to discover that NLPTfit would be a great program for themselves. Other times multiple siblings wish to train together. However it comes about, we're always honored when family members choose to train with us. However we know that things can quickly get expensive. So as a way of saying thank you, we provide a <b>10% discount to each family member's program cost.</b> </p>
 
-      <div class="fine-print">
-        <h4>Conditions</h4>
-        <ul>
-          <li>Applicable for NLPTfit, NLPTathlete, NLPTteam, Youth Development Program</li>
-          <li>Only available for immediate family members from the same household.</li>
-          <li>The discount will be applied to the lower priced service.</li>
-          <li>Discounts can not get pro-rated mid-billing cycle. Discounts will be applied to the next billing date.</li>
-          <li>Not available for the Summer HP Program</li>
-        </ul>
+        <div class="fine-print">
+          <h4>Conditions</h4>
+          <ul>
+            <li>Applicable for NLPTfit, NLPTathlete, NLPTteam, Youth Development Program</li>
+            <li>Only available for immediate family members from the same household.</li>
+            <li>The discount will be applied to the lower priced service.</li>
+            <li>Discounts can not get pro-rated mid-billing cycle. Discounts will be applied to the next billing date.</li>
+            <li>Not available for the Summer HP Program</li>
+          </ul>
+        </div>
       </div>
 
       <h1>Referral Program</h1>
