--- a/partials/nav_bar.hbs
+++ b/partials/nav_bar.hbs
@@ -24,6 +24,7 @@
               <li><a class="nav-link" href="/blog/">Blog</a></li>
               <li><a class="nav-link" href="/about/">About</a></li>
               <li><a class="nav-link" href="/contact/">Contact</a></li>
+              <li><a class="nav-link" href="/clients-section/">Clients section</a></li>
             </ul>
           </div>
         </div>
