--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -121,6 +121,10 @@ li {
 img {
   margin-bottom: 20px;
 }
+figcaption {
+  font-size: 0.8em;
+  color: #444;
+}
 .active {
   background-color: $theme-color-highlight;
 }
@@ -635,6 +639,9 @@ PROGRAMS PAGE
       display: list-item;
     }
   }
+  a {
+    color: $twitter;
+  }
 }
 .content-text {
   width: 70%;
@@ -766,6 +773,17 @@ FIT PAGE
 */
 .fit-page {
   background-image: url("../images/banners/fit-banner.jpg");
+}
+.program-link-box {
+  width: 300px;
+  height: 150px;
+  display: block;
+  padding: 0.5em;
+  box-sizing: border-box;
+  background: linear-gradient(white, white);
+  box-shadow: 1px 1px 3px 1px #d8d8d8;
+  border: 1px solid #c3c3c3;
+  border-radius: 3px;
 }
 /*
 =================
