--- a/partials/program_content_fit.hbs
+++ b/partials/program_content_fit.hbs
@@ -1,13 +1,13 @@
 <div class="sub-programs">
-<ul>
-  <li class="button sub-program-button" data-id="1">Why NLPT?</li>
-  <li class="button sub-program-button" data-id="2">Our Program</li>
-  <li class="button sub-program-button" data-id="3">Schedule</li>
-  <li class="button sub-program-button" data-id="4">FAQ</li>
-  <li class="button sub-program-button" data-id="5">Pricing and sign-up</li>
-  <li class="button sub-program-button" data-id="6">Fit Cup Challenge</li>
-  <li class="button sub-program-button" data-id="7">Nutrition Coaching</li>
-</ul>
+  <ul>
+    <li class="button sub-program-button" data-id="1">Why NLPT?</li>
+    <li class="button sub-program-button" data-id="2">Our Program</li>
+    <li class="button sub-program-button" data-id="3">Schedule</li>
+    <li class="button sub-program-button" data-id="4">FAQ</li>
+    <li class="button sub-program-button" data-id="5">Pricing and sign-up</li>
+    <li class="button sub-program-button" data-id="6">Fit Cup Challenge</li>
+    <li class="button sub-program-button" data-id="7">Nutrition Coaching</li>
+  </ul>
 </div>
 <div class="content-text">
   <h1 class="program-top">NLPTfit</h1>
@@ -101,31 +101,28 @@
     {{> "stratford_fit_schedule"}}
   </div>
 
-
-
-
   <h2 class="subsection" id="faq" data-id="4">FAQ</h2>
 
-<h3>1. Are there any start-up or cancellation fees?</h3>
-<p>No, we like to keep it simple. Our membership is month-to-month. Cancel at any time.</p>
+  <h3>1. Are there any start-up or cancellation fees?</h3>
+  <p>No, we like to keep it simple. Our membership is month-to-month. Cancel at any time.</p>
 
-<h3>2. This looks like a gym for serious athletes. What if I’ve never trained before?</h3>
-<p>Although we do like to train hard, you don’t need any experience to get started with us. A cornerstone of a any good training program is proper progression, and our system is designed to handle you if you’ve got years of training experience or if you're completely new to exercise.</p>
+  <h3>2. This looks like a gym for serious athletes. What if I’ve never trained before?</h3>
+  <p>Although we do like to train hard, you don’t need any experience to get started with us. A cornerstone of a any good training program is proper progression, and our system is designed to handle you if you’ve got years of training experience or if you're completely new to exercise.</p>
 
-<h3>3. What if I have a serious injury or pain that I’m dealing with?</h3>
-<p>We encourage you to still give us a call. It’s not uncommon for our coaches to have to make modifications to the program due to a client dealing with an injury. Unless it’s something really serious that prevents you from moving around, we’re pretty good at adjusting things so you can still get a workout.</p>
+  <h3>3. What if I have a serious injury or pain that I’m dealing with?</h3>
+  <p>We encourage you to still give us a call. It’s not uncommon for our coaches to have to make modifications to the program due to a client dealing with an injury. Unless it’s something really serious that prevents you from moving around, we’re pretty good at adjusting things so you can still get a workout.</p>
 
-<h3>4. Do you do testing or assessments?</h3>
-<p>Yes. As a new client, you will begin with a one-on-one meeting with a coach prior to starting to go over your goals, your health, any injuries you may have and your exercise history. You will undergo a movement screen to identify any areas where we may need to modify your program. We don’t do any rigorous testing on initial visits, however. We’d rather do a thorough assessment of your background first. Although if specific fitness testing is something you want to do, we can certainly do that. We hold reassessments every eight weeks.</p>
+  <h3>4. Do you do testing or assessments?</h3>
+  <p>Yes. As a new client, you will begin with a one-on-one meeting with a coach prior to starting to go over your goals, your health, any injuries you may have and your exercise history. You will undergo a movement screen to identify any areas where we may need to modify your program. We don’t do any rigorous testing on initial visits, however. We’d rather do a thorough assessment of your background first. Although if specific fitness testing is something you want to do, we can certainly do that. We hold reassessments every eight weeks.</p>
 
-<h3>5. Do you offer different pricing options if I can’t train five times a week?</h3>
-<p>We do not. Although we do have some clients that train with us every day, our program was originally designed (and priced) for people looking to workout three times per week. We think that three visits to the gym should be all that most people need to get the benefits they’re looking for.</p>
+  <h3>5. Do you offer different pricing options if I can’t train five times a week?</h3>
+  <p>We do not. Although we do have some clients that train with us every day, our program was originally designed (and priced) for people looking to workout three times per week. We think that three visits to the gym should be all that most people need to get the benefits they’re looking for.</p>
 
-<h3>6. What if I only want to work out one to two times per week?</h3>
-<p>We have a plan for you. Please see our membership options section below.</p>
+  <h3>6. What if I only want to work out one to two times per week?</h3>
+  <p>We have a plan for you. Please see our membership options section below.</p>
 
-<h3>7. Are there showers and changing rooms available?</h3>
-<p>Our Cambridge location has both men and women’s changing rooms and showers. Our Stratford location is only equipped with changing rooms. To learn more about each facility, please click <a href="/facilities">here</a>.</p>
+  <h3>7. Are there showers and changing rooms available?</h3>
+  <p>Our Cambridge location has both men and women’s changing rooms and showers. Our Stratford location is only equipped with changing rooms. To learn more about each facility, please click <a href="/facilities">here</a>.</p>
   <div class="button scroll-up-button"><h4>Back to top</h4></div>
 
   <h2 class="subsection" id="nlptfitpricing" data-id="5">Pricing and sign-up</h2>
@@ -167,9 +164,8 @@
 
   <h3>When does it run?</h3>
 
-  <p>The Fit Cup is an eight-week challenge that runs the months of Jan/Feb, Apr/May, July/Aug and Oct/November of each calendar year!</p>
+  <p>The Fit Cup is an eight-week challenge that runs twice per year. One starting in January and the other in September.</p>
 
-  <p style="background-color: #b00b00; color: #ffffff; padding: 1em; border-radius: 4px">The next round is scheduled to begin in January 2017!</p>
 
   <h3>What makes the Fit Cup different?</h3>
 
@@ -184,12 +180,12 @@
     <li>Team challenges and prizes</li>
     <li>And everything that you already receive with the NLPT Fit Programming (including unlimited coaching, assessment, program design, etc.)</li>
   </ul>
-  <h3>How much does the Fit Cup cost?</h3>
 
-  <p>For current NLPTfit clients, it's free! For non-members the cost is $359 to enroll.</p>
-
-
-
+  <h3>The next Fit Cup</h3>
+  <p>We're all set to begin another round of the Fit Cup in January 2017! Click <a href="/fit-cup-4/">here</a> to visit the Fit Cup 4 page!</p>
+  <a class="program-link-box clearfix" href="/fit-cup-4/">
+    <img src="/assets/images/FC4.png" />
+  </a>
 
   <div class="button scroll-up-button"><h4>Back to top</h4></div>
 
